syntax = "proto3";

package number ;

option java_package = "com.demo.number";

option java_multiple_files = true;

message NumberRequest {
  int64 number       = 1;
}

message NumberResponse {
  int64 number = 1;
  int64 square = 2;
}

service NumberService {
  rpc getSquare (NumberRequest) returns (NumberResponse);

  rpc getSquareStream (stream NumberRequest) returns (stream NumberResponse);
}